--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1> welcome to my website</h1>
     <h2> hello my first page</h2>
+    <div class="wajid">
+        this my first github repository
+    </div>
 </body>
 </html>
