--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <section class="showcase">
         <header>
-          <h2 class="logo">Travel</h2>
+          <h2 class="logo">WK</h2>
           <div class="toggle"></div>
         </header>
         <video src="mountains.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
-          <h2>Never Stop To </h2> 
+          <h2>above the mountains! </h2> 
           <h3>Exploring The World</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
