--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <video src="mountains.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
-          <h2>above the mountains! </h2> 
-          <h3>Exploring The World</h3>
+          <h2>justice for kashmir</h2> 
+          <h3>mountains are yelling!</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
